--- a/index.qmd
+++ b/index.qmd
@@ -19,7 +19,7 @@ Welcome!
 
 I am a Ph.D. candidate in Economics at the University of Arizona.
 
-My research interests are in **environmental and energy economics** and **empirical industrial organization**. My current work studies regulatory discretion in water quality enforcement.
+My research interests are in **environmental and energy economics** and **empirical industrial organization**. My current work studies regulatory uncertainty and facility adjustment frictions in water quality enforcement.
 
 I received my M.A. in Economics from the University of Tokyo, B.A. in Economics from National Taiwan University, and B.B.A. in Business Economics from City University of Hong Kong.
 
