--- a/research.qmd
+++ b/research.qmd
@@ -6,13 +6,20 @@ title: "Research"
 Work in Progress
 :::
 
+[Adjustment Frictions and the Cost of Environmental Regulatory Uncertainty]{style="font-weight: 600;"} (Job Market Paper)
 
-[Adjustment Frictions and the Cost of Environmental Regulatory Uncertainty]{style="font-weight: bold;"} (Job Market Paper)
+::: abstract
+Political turnovers can significantly alter regulatory enforcement, creating uncertainty for regulated facilities. Adjusting pollution abatement to new enforcement regimes often involves costly frictions. This paper quantifies the welfare cost of regulatory uncertainty in the context of California's water quality enforcement, with a focus on the roles of adjustment frictions and political volatility. Using enforcement and compliance data linked to regulator membership, I show that facility violations adjust with a delay following regulator turnovers, consistent with such frictions. I then estimate a model of facility pollution featuring adjustment frictions and fluctuating penalties. The estimates reveal substantial frictions: past pollution influences abatement decisions five times more than current penalties. While these frictions raise costs for facilities, they also stabilize violation outcomes by dampening responses to political swings. This stabilizing effect is further strengthened by uncertainty about future regulatory regimes, however, at the cost of  amplified adjustment costs.
+:::
 
-[Measurement Errors in Weather Data]{style="font-weight: bold;"} ---with Derek Lemoine, Wint Thu
+[Measurement Errors in Weather Data]{style="font-weight: 600;"} ---with [Derek Lemoine](https://www.dereklemoine.com/){style="color: #086788;"}, [Wint Thu](https://wintmthu.org/){style="color: #086788;"}
 
-[Do Firms Avoid Pollution? Water Pollution and Beverage Manufacturers' Location]{style="font-weight: bold;"}
+::: abstract
+Accurately estimating the economic impacts of weather is increasingly important, yet challenging due to inherent measurement error in weather data. Beyond the classic attenuation bias, endogenous entry and exit of weather stations can further distort these estimates. This concern is particularly salient as recent studies increasingly rely on panel fixed effects regressions, where the influence of measurement error can be amplified. To address this issue, we propose an instrumental variable approach that uses weather measures constructed to keep measurement errors constant over time and across space. We build such data and apply it to a set of canonical studies on the effects of weather. Our results show that correcting for this bias alters the estimated effects, often changing the magnitude and in some cases, even the sign of the effects.
+:::
 
-[Regulating Moral Hazard in Third-Party Vehicle Inspections: California Smog Check]{style="font-weight: bold;"}
+[Do Firms Avoid Pollution? Water Pollution and Beverage Manufacturers' Location]{style="font-weight: 600;"}
 
-[The Choice of Cashless Payment by Consumers]{style="font-weight: bold;"} ---with Naoki Wakamori
+::: abstract
+I study a novel channel through which environmental pollution imposes a cost on firms: the quality of raw material inputs. Input water quality greatly determines the quality of beverages and thus, water pollution can affect beverage manufacturers’ profits and where they operate. Specifically, I investigate how water pollution impacts the entry decisions of beverage manufacturers. I use annual allotments of Clean Water State Revolving Fund to a state as an instrumental variable for water quality in downstream, adjacent counties. I find that past allotments increase downstream water quality and that a 10% increase in mean dissolved oxygen concentrations leads to an increase in the number of net entry of beverage manufacturers by 2.36 firms.
+:::
