--- a/research.qmd
+++ b/research.qmd
@@ -9,7 +9,7 @@ Work in Progress
 [Adjustment Frictions and the Cost of Environmental Regulatory Uncertainty]{style="font-weight: 600;"} (Job Market Paper)
 
 ::: abstract
-Political turnovers can significantly alter regulatory enforcement, creating uncertainty for regulated facilities. Adjusting pollution abatement to new enforcement regimes often involves costly frictions. This paper quantifies the welfare cost of regulatory uncertainty in the context of California's water quality enforcement, with a focus on the roles of adjustment frictions and political volatility. Using enforcement and compliance data linked to regulator membership, I show that facility violations adjust with a delay following regulator turnovers, consistent with such frictions. I then estimate a model of facility pollution featuring adjustment frictions and fluctuating penalties. The estimates reveal substantial frictions: past pollution influences abatement decisions five times more than current penalties. While these frictions raise costs for facilities, they also stabilize violation outcomes by dampening responses to political swings. This stabilizing effect is further strengthened by uncertainty about future regulatory regimes, however, at the cost of  amplified adjustment costs.
+Political turnovers can significantly alter regulatory enforcement, creating uncertainty for regulated facilities. Adjusting pollution abatement to new enforcement regimes often involves costly frictions. This paper quantifies the welfare cost of regulatory uncertainty in the context of California's water quality enforcement, with a focus on the roles of adjustment frictions and political volatility. Using enforcement and compliance data linked to regulator membership, I show that facility violations gradually adjust following regulator turnovers, consistent with such frictions. I then estimate a model of facility pollution featuring adjustment frictions and varying penalties. The estimates reveal substantial frictions: past pollution influences abatement decisions five times more than current penalties. While these frictions raise costs for facilities, they also stabilize violation outcomes by dampening responses to political swings. However, uncertainty about future regulatory regimes weakens this stabilizing effect and amplifies adjustment costs.
 :::
 
 [Measurement Errors in Weather Data]{style="font-weight: 600;"} ---with [Derek Lemoine](https://www.dereklemoine.com/){style="color: #086788;"}, [Wint Thu](https://wintmthu.org/){style="color: #086788;"}
