--- a/index.qmd
+++ b/index.qmd
@@ -23,6 +23,8 @@ I am a Ph.D. candidate in Economics at the University of Arizona.
 
 My research interests are in **environmental and energy economics** and **empirical industrial organization**. My current work studies regulatory uncertainty and facility adjustment frictions in water quality enforcement.
 
+**I am on the 2025-2026 job market**.
+
 You can contact me at [yyeh\@arizona.edu](mailto:%20yyeh@arizona.edu).
 :::
 :::
