--- a/research.qmd
+++ b/research.qmd
@@ -6,7 +6,7 @@ title: "Research"
 Work in Progress
 :::
 
-[Adjustment Frictions and the Cost of Environmental Regulatory Uncertainty]{style="font-weight: 600;"} (Job Market Paper)
+[Adjustment Frictions and the Cost of Environmental Regulatory Uncertainty](/files/Yun-TingYeh_JMP.pdf){style="font-weight: 600;"} (Job Market Paper)
 
 ::: abstract
 When regulators are appointed by elected government officials, political power shifts create regulatory uncertainty through regulator turnover. Regulator turnover can change how rules are enforced, generating fluctuations in enforcement intensity for regulated facilities. Moreover, adjusting pollution levels in response to new enforcement regimes often involves adjustment costs. This paper quantifies the welfare cost of such regulatory fluctuations in California's water quality enforcement, emphasizing the roles of adjustment costs and political inefficiency---that is, inefficiencies stemming from politically driven variation in enforcement intensity. Using linked data on enforcement, compliance, and regulator membership, I show that facility violations gradually adjust following regulator turnover, consistent with adjustment costs. Estimating a structural model of facility pollution decisions, I find substantial adjustment costs: past pollution influences abatement 3.5 times more than current fines, reflecting slow adjustments in abatement behavior. I estimate welfare losses equal to nearly one-third of total fines---28% from adjustment costs and 72% from political inefficiency---relative to a stable enforcement regime. While these adjustment costs raise costs for facilities, they also stabilize pollution outcomes by dampening responses to regulatory swings. However, uncertainty about future regimes weakens this stabilizing effect and amplifies adjustment costs. I further show that institutional stability improves welfare: doubling regulator term lengths to eight years reduces welfare losses by approximately half.
@@ -21,5 +21,5 @@ Accurately estimating the economic impacts of weather is increasingly important,
 [Do Firms Avoid Pollution? Water Pollution and Beverage Manufacturers' Location]{style="font-weight: 600;"}
 
 ::: abstract
-I study a novel channel through which environmental pollution imposes a cost on firms: the quality of raw material inputs. Input water quality greatly determines the quality of beverages and thus, water pollution can affect beverage manufacturers’ profits and where they operate. Specifically, I investigate how water pollution impacts the entry decisions of beverage manufacturers. I use annual allotments of Clean Water State Revolving Fund to a state as an instrumental variable for water quality in downstream, adjacent counties. I find that past allotments increase downstream water quality and that a 10% increase in mean dissolved oxygen concentrations leads to an increase in the number of net entry of beverage manufacturers by 2.36 firms.
+I study a novel channel through which environmental pollution imposes a cost on firms: the quality of raw material inputs. Input water quality greatly determines the quality of beverages and thus, water pollution can affect beverage manufacturers' profits and where they operate. Specifically, I investigate how water pollution impacts the entry decisions of beverage manufacturers. I use annual allotments of Clean Water State Revolving Fund to a state as an instrumental variable for water quality in downstream, adjacent counties. I find that past allotments increase downstream water quality and that a 10% increase in mean dissolved oxygen concentrations leads to an increase in the number of net entry of beverage manufacturers by 2.36 firms.
 :::
