--- a/research.qmd
+++ b/research.qmd
@@ -9,7 +9,7 @@ Work in Progress
 [Adjustment Frictions and the Cost of Environmental Regulatory Uncertainty](/files/Yun-TingYeh_JMP.pdf){style="font-weight: 600;color: #086788"} (Job Market Paper)
 
 ::: abstract
-When regulators are appointed by elected government officials, political power shifts create regulatory uncertainty through regulator turnover. Regulator turnover can change how rules are enforced, generating fluctuations in enforcement intensity for regulated facilities. Moreover, adjusting pollution levels in response to new enforcement regimes often involves adjustment costs. This paper quantifies the welfare cost of such regulatory fluctuations in California's water quality enforcement, emphasizing the roles of adjustment costs and political inefficiency---that is, inefficiencies stemming from politically driven variation in enforcement intensity. Using linked data on enforcement, compliance, and regulator membership, I show that facility violations gradually adjust following regulator turnover, consistent with adjustment costs. Estimating a structural model of facility pollution decisions, I find substantial adjustment costs: past pollution influences abatement 3.5 times more than current fines, reflecting slow adjustments in abatement behavior. I estimate welfare losses equal to nearly one-third of total fines---28% from adjustment costs and 72% from political inefficiency---relative to a stable enforcement regime. While these adjustment costs raise costs for facilities, they also stabilize pollution outcomes by dampening responses to regulatory swings. However, uncertainty about future regimes weakens this stabilizing effect and amplifies adjustment costs. I further show that institutional stability improves welfare: doubling regulator term lengths to eight years reduces welfare losses by approximately half.
+When regulators are appointed by elected government officials, political power shifts create regulatory uncertainty through regulator turnover. Regulator turnover can change how rules are enforced, generating fluctuations in enforcement intensity for regulated facilities. Moreover, adjusting pollution levels in response to new enforcement regimes often involves adjustment costs. This paper quantifies the welfare cost of such regulatory fluctuations in California's water quality enforcement, emphasizing the roles of adjustment costs and political inefficiency---that is, inefficiencies stemming from politically driven variation in enforcement intensity. Using linked data on enforcement, compliance, and regulator membership, I show that facility violations gradually adjust following regulator turnover, consistent with adjustment costs. Estimating a structural model of facility pollution decisions, I find substantial adjustment costs: past pollution influences abatement 3.5 times more than current fines, reflecting slow adjustments in abatement behavior. I estimate welfare losses equal to nearly one-third of total fines---31% from adjustment costs and 69% from political inefficiency---relative to a stable enforcement regime. While these adjustment costs raise costs for facilities, they also stabilize pollution outcomes by dampening responses to regulatory swings. However, uncertainty about future regimes weakens this stabilizing effect and amplifies adjustment costs. I further show that institutional stability improves welfare: doubling regulator term lengths to eight years reduces welfare losses by 14%.
 :::
 
 [Measurement Errors in Weather Data]{style="font-weight: 600;"} ---with [Derek Lemoine](https://www.dereklemoine.com/){style="color: #086788;"}, [Wint Thu](https://wintmthu.org/){style="color: #086788;"}
